--- a/resources/ressources.qrc
+++ b/resources/ressources.qrc
@@ -3,5 +3,8 @@
         <file>fake_map.png</file>
         <file>test_gcs_qt.xml</file>
         <file>tile_sources.xml</file>
+        <file>pictures/map_layers_hover.svg</file>
+        <file>pictures/map_layers_normal.svg</file>
+        <file>pictures/map_layers_pressed.svg</file>
     </qresource>
 </RCC>
