Adds layer tab.

--- a/resources/ressources.qrc
+++ b/resources/ressources.qrc
@@ -6,5 +6,7 @@
         <file>pictures/map_layers_hover.svg</file>
         <file>pictures/map_layers_normal.svg</file>
         <file>pictures/map_layers_pressed.svg</file>
+        <file>pictures/hide.svg</file>
+        <file>pictures/show.svg</file>
     </qresource>
 </RCC>
