--- a/resources/ressources.qrc
+++ b/resources/ressources.qrc
@@ -11,5 +11,7 @@
         <file>pictures/cursor_waypoint_black.svg</file>
         <file>pictures/cursor_circle_black.svg</file>
         <file>pictures/cursor_path_black.svg</file>
+        <file>pictures/aircraft_fixedwing1.svg</file>
+        <file>pictures/aircraft_quad1.svg</file>
     </qresource>
 </RCC>
