Begins settings widget.

--- a/resources/ressources.qrc
+++ b/resources/ressources.qrc
@@ -13,5 +13,11 @@
         <file>pictures/cursor_path_black.svg</file>
         <file>pictures/aircraft_fixedwing1.svg</file>
         <file>pictures/aircraft_quad1.svg</file>
+        <file>pictures/link_ok.svg</file>
+        <file>pictures/link_nok.svg</file>
+        <file>pictures/bat_empty.svg</file>
+        <file>pictures/bat_full.svg</file>
+        <file>pictures/bat_half.svg</file>
+        <file>pictures/settings.svg</file>
     </qresource>
 </RCC>
