--- a/src/widgets/settings_explorer.ui
+++ b/src/widgets/settings_explorer.ui
@@ -20,23 +20,6 @@
       <widget class="QComboBox" name="aircraft_combo"/>
      </item>
      <item>
-      <widget class="QPushButton" name="home_settings">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="icon">
-        <iconset resource="../../resources/ressources.qrc">
-         <normaloff>:/pictures/settings.svg</normaloff>:/pictures/settings.svg</iconset>
-       </property>
-      </widget>
-     </item>
-     <item>
       <layout class="QHBoxLayout" name="path_layout"/>
      </item>
      <item>
@@ -65,8 +48,6 @@
    </item>
   </layout>
  </widget>
- <resources>
-  <include location="../../resources/ressources.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
