Massive changes layout and settings: - Add layout building over map widget - Replace SettingViewer by a new one

--- a/src/widgets/pprzmap.ui
+++ b/src/widgets/pprzmap.ui
@@ -17,6 +17,13 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
+      <widget class="QPushButton" name="layer_button">
+       <property name="text">
+        <string>Layers</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
