--- a/resources/ressources.qrc
+++ b/resources/ressources.qrc
@@ -24,5 +24,10 @@
         <file>pictures/pfd_aircraft_pitch_rotorcraft.svg</file>
         <file>pictures/pfd_aircraft_roll_rotorcraft.svg</file>
         <file>pictures/pfd_aircraft_yaw_rotorcraft.svg</file>
+        <file>pictures/lock.svg</file>
+        <file>pictures/unlocked.svg</file>
+        <file>dark.qss</file>
+        <file>pictures/lock_dark.svg</file>
+        <file>pictures/lock_warning.svg</file>
     </qresource>
 </RCC>
