Set button style from stylesheet.

--- a/resources/ressources.qrc
+++ b/resources/ressources.qrc
@@ -29,5 +29,6 @@
         <file>dark.qss</file>
         <file>pictures/lock_dark.svg</file>
         <file>pictures/lock_warning.svg</file>
+        <file>style.qss</file>
     </qresource>
 </RCC>
