--- a/resources/ressources.qrc
+++ b/resources/ressources.qrc
@@ -27,5 +27,6 @@
         <file>pictures/lock_dark.svg</file>
         <file>pictures/lock_warning.svg</file>
         <file>pictures/no_ac.svg</file>
+        <file>pictures/icon.svg</file>
     </qresource>
 </RCC>
