--- a/resources/ressources.qrc
+++ b/resources/ressources.qrc
@@ -42,5 +42,6 @@
         <file>pictures/rc_ok.svg</file>
         <file>pictures/imu_nok.svg</file>
         <file>pictures/imu_ok.svg</file>
+        <file>pictures/vertical_speed.svg</file>
     </qresource>
 </RCC>
